--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,8 +1,34 @@
 body {
     margin: 0px;
     font-family: sans-serif;
+    text-align: center;
+    margin: auto;
 }
 
-.content{
-    background-color: black;
+table, th, td {
+    text-align: center;
+    border: 1px solid #ddd;
+    padding: 8px;
+    margin: auto;
+  }
+
+th{
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #4CAF50;
+    color: white;
+}
+
+td {
+    text-align: center;
+    padding: 5px;
+}
+
+.form{
+    margin-top: 20px;
+}
+
+#content{
+    width: 50%;
 }
